--- a/.config/uwsgi/TodoCampus.ini
+++ b/.config/uwsgi/TodoCampus.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-chdir = /home/jeon/Server/tot
+chdir = /home/jeon/project/todo-campus-django-backend
 module = TodoCampus_BackEnd.wsgi:application
 home = /home/jeon/project/todo-campus-django-backend/TodoCampusVenv/
 
